--- a/index.ipynb
+++ b/index.ipynb
@@ -833,8 +833,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here \n",
-    "# imports"
+    "Pipeline(memory=None,\n",
+    "     steps=[('pca', PCA(copy=True, iterated_power='auto', n_components=27, random_state=None,\n",
+    "  svd_solver='auto', tol=0.0, whiten=False)), ('clf', SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+    "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='rbf',\n",
+    "  max_iter=-1, probability=False, random_state=123, shrinking=True,\n",
+    "  tol=0.001, verbose=False))])\n",
+    "Pipeline(memory=None,\n",
+    "     steps=[('pca', PCA(copy=True, iterated_power='auto', n_components=27, random_state=None,\n",
+    "  svd_solver='auto', tol=0.0, whiten=False)), ('clf', DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
+    "            max_features=None, max_leaf_nodes=None,\n",
+    "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+    "            min_samples_leaf=1, min_samples_split=2,\n",
+    "            min_weight_fraction_leaf=0.0, presort=False, random_state=123,\n",
+    "            splitter='best'))])\n",
+    "Pipeline(memory=None,\n",
+    "     steps=[('pca', PCA(copy=True, iterated_power='auto', n_components=27, random_state=None,\n",
+    "  svd_solver='auto', tol=0.0, whiten=False)), ('clf', RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+    "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+    "           ...timators=10, n_jobs=1,\n",
+    "            oob_score=False, random_state=123, verbose=0, warm_start=False))])\n",
+    "Support Vector Machine pipeline test accuracy: 0.749\n",
+    "Decision Tree pipeline test accuracy: 0.666\n",
+    "Random Forest pipeline test accuracy: 0.745"
    ]
   },
   {
