--- a/index.ipynb
+++ b/index.ipynb
@@ -829,9 +829,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-295237b7e1a1>, line 19)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-295237b7e1a1>\"\u001b[0;36m, line \u001b[0;32m19\u001b[0m\n\u001b[0;31m    ...timators=10, n_jobs=1,\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "Pipeline(memory=None,\n",
     "     steps=[('pca', PCA(copy=True, iterated_power='auto', n_components=27, random_state=None,\n",
